wip: scalable styles above 1280px

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,10 @@ html {
   background-color: inherit;
   font-family: 'Garamond Premr Pro', Fallback, sans-serif;
   font-weight: 100;
-  font-size: 34px; }
+  font-size: 2.65vw; }
+  @media screen and (max-width: 1280px) {
+    html {
+      font-size: 34px; } }
 
 *, *::before, *::after {
   box-sizing: border-box;
@@ -536,14 +539,14 @@ h1 {
   font-variant-caps: small-caps;
   font-variant: small-caps; }
 
-h2, h3 {
-  font-size: 0.647rem; }
-
 h2 {
   font-size: 1rem;
   text-transform: lowercase;
   font-variant-caps: small-caps;
   font-variant: small-caps; }
+
+h3 {
+  font-size: 0.647rem; }
 
 p {
   font-size: 0.412rem; }
@@ -562,9 +565,13 @@ small, footer li, .small {
   overflow: hidden; }
 
 main {
-  min-height: calc(100vh - 141px);
-  padding-bottom: 100px;
-  padding-top: 81px; }
+  min-height: calc(100vh - 4.147rem);
+  padding-top: 2.38rem;
+  padding-bottom: 100px; }
+  @media screen and (max-width: 1280px) {
+    main {
+      padding-top: 81px;
+      min-height: calc(100vh - 141px); } }
 
 .row {
   display: flex;
@@ -605,7 +612,7 @@ main {
     flex: 7.5; } }
 
 .inner-width {
-  width: calc(100% - 100px); }
+  width: calc(100% - 2.94rem); }
 
 .row.center {
   align-items: center;
@@ -840,14 +847,14 @@ section h2 {
   text-align: center; }
 
 section.blockquote {
-  padding: 250px 0;
-  max-width: 800px; }
+  padding: 7.35rem 0;
+  max-width: 23.529rem; }
   section.blockquote h2 {
     padding-bottom: 1em; }
 
 section .square {
-  padding: 250px 0;
-  max-width: 600px; }
+  padding: 7.35rem 0;
+  max-width: 17.647rem; }
 
 section h2 {
   padding-bottom: 1em; }
@@ -861,7 +868,7 @@ section h3 {
   -webkit-shape-inside: polygon(0px 0px, 0 300px, 300px 300px); }
 
 #logo {
-  min-height: calc(100vh - 2.44rem);
+  min-height: calc(100vh - 2.35rem);
   background-color: #0c3520; }
   #logo h1 {
     color: #ffffff;
