--- a/css/styles.css
+++ b/css/styles.css
@@ -801,24 +801,24 @@ footer.shop #logos {
   border-bottom: 1px solid #ffffff; }
 
 footer #logos {
-  padding-bottom: 27px;
+  padding-bottom: 0.794rem;
   border-bottom: 1px solid #000000; }
   footer #logos .column {
-    max-width: 165px;
+    max-width: 4.85rem;
     letter-spacing: 0.106rem; }
     footer #logos .column#thistle {
       margin-right: 0; }
     footer #logos .column#lighthouse {
       margin-left: 0; }
   footer #logos img {
-    max-width: 57px;
-    padding-bottom: 15px; }
+    max-width: 1.676rem;
+    padding-bottom: 0.441rem; }
   footer #logos .small {
     font-size: 0.265rem;
     font-family: 'Robinsons Gothic Regular'; }
 
 footer #contentinfo {
-  padding: 27px 0 185px 0; }
+  padding: 1.09rem 0 5.44rem 0; }
   footer #contentinfo ul {
     justify-content: center; }
     footer #contentinfo ul li {
@@ -882,7 +882,7 @@ section h3 {
 #products,
 #newsletterSignUp,
 #pressNews {
-  padding: 80px 0; }
+  padding: 2.35rem 0; }
 
 #about, #region {
   background-color: #0c3520;
