--- a/css/styles.scss
+++ b/css/styles.scss
@@ -950,10 +950,10 @@
             }
           }
           #logos {
-            padding-bottom: 27px;
+            padding-bottom: 0.794rem;
             border-bottom: 1px solid #000000;
             .column {
-              max-width: 165px;
+              max-width: 4.85rem;
               letter-spacing: 0.106rem;
 
               &#thistle{
@@ -964,8 +964,8 @@
               }
             }
             img {
-              max-width: 57px;
-              padding-bottom: 15px;
+              max-width: 1.676rem;
+              padding-bottom: 0.441rem;
             }
             .small {
               font-size: 0.265rem;
@@ -974,7 +974,7 @@
           }
 
           #contentinfo {
-            padding: 27px 0 185px 0;
+            padding: 1.09rem 0 5.44rem 0;
 
             ul {
               justify-content: center;
@@ -1073,7 +1073,7 @@
       #products,
       #newsletterSignUp,
       #pressNews {
-        padding: 80px 0;
+        padding: 2.35rem 0;
       }
 
       #about, #region {
