--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1126,12 +1126,12 @@
         }
 
 
-        /* Shop
+        /* Terms, Privacy, Careers - Indexed Layout
            ========================================================================== */
 
 
            .terms, .privacy, .careers {
-             max-width: 733px;
+             max-width: 21.55rem;
 
              .row {
                border-top: 1px solid #000000;
