--- a/css/styles.scss
+++ b/css/styles.scss
@@ -707,6 +707,9 @@
 
       .inner-width {
         width: calc(100% - 2.94rem);
+        @media only screen and (max-width: 767px) {
+          width: calc(100% - 60px;);
+        }
       }
 
       .row.center {
@@ -791,13 +794,20 @@
           display: grid;
           grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
 
-          @media only screen and (max-width: 800px) {
+          @media only screen and (max-width: 1100px) {
               grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
+          }
+
+          @media only screen and (max-width: 600px) {
+              grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
           }
 
           .column {
             padding: 1em;
-            padding-top: 50px;
+            @media only screen and (max-width: 600px) {
+              padding: 0 0 1em 0;
+            }
+            padding-top: 1em;
 
             .title {
               text-transform: lowercase;
