add: mp4 drone field to home

--- a/css/styles.css
+++ b/css/styles.css
@@ -568,7 +568,7 @@ small, footer li, .small {
 
 main {
   min-height: calc(100vh - 4.147rem);
-  padding-top: 2.38rem;
+  padding-top: 1.95rem;
   padding-bottom: 100px; }
   @media screen and (max-width: 1280px) {
     main {
@@ -710,7 +710,10 @@ header {
   width: 100%;
   top: 0;
   left: 0;
-  transition: 0.7s; }
+  z-index: 999; }
+  @media only screen and (min-width: 1280px) {
+    header {
+      padding: 1.5em 0; } }
 
 nav ul {
   font-family: 'Garamond Premr Pro';
@@ -892,13 +895,28 @@ section h3 {
   -webkit-shape-inside: polygon(0px 0px, 0 300px, 300px 300px); }
 
 #logo {
-  min-height: calc(100vh - 2.35rem);
-  background-color: #0c3520; }
+  min-height: calc(100vh - 1.9rem);
+  background-color: #0c3520;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  min-width: 100%; }
   #logo h1 {
+    position: absolute;
+    z-index: 100;
     color: #ffffff;
     font-family: 'Robinsons Gothic Regular';
     font-size: 3.117rem;
-    letter-spacing: 0.206rem; }
+    letter-spacing: 0.206rem;
+    background: transparent; }
+  #logo video {
+    position: relative;
+    right: 0;
+    bottom: 0;
+    min-width: 100vw;
+    min-height: 100vh; }
 
 #tagline h3 {
   text-align: center; }
