--- a/css/styles.scss
+++ b/css/styles.scss
@@ -648,7 +648,7 @@
 
     main {
       min-height: calc(100vh - 4.147rem);
-      padding-top: 2.38rem;
+      padding-top: 1.95rem;
       padding-bottom: 100px;
       @media screen and (max-width: 1280px) {
         padding-top: 81px;
@@ -836,8 +836,11 @@
         width: 100%;
         top: 0;
         left: 0;
-        transition: 0.7s;
-
+        z-index: 999;
+        // transition: 0.7s;
+        @media only screen and (min-width: 1280px) {
+            padding: 1.5em 0;
+        }
         // &.hideOnScroll {
         //     -webkit-transform: translateY(-81px);
         //     transform: translateY(-81px);
@@ -1099,14 +1102,31 @@
       }
 
       #logo {
-        min-height: calc(100vh - 2.35rem);
+        min-height: calc(100vh - 1.9rem);
         background-color: #0c3520;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+        min-width: 100%;
 
         h1 {
+          position: absolute;
+          z-index: 100;
           color: #ffffff;
           font-family: 'Robinsons Gothic Regular';
           font-size: 3.117rem;
           letter-spacing: 0.206rem;
+          background: transparent;
+        }
+
+        video {
+            position: relative;
+            right: 0;
+            bottom: 0;
+            min-width: 100vw;
+            min-height: 100vh;
         }
       }
 
