--- a/css/styles.css
+++ b/css/styles.css
@@ -902,21 +902,66 @@ section h3 {
   width: 100%;
   height: 100%;
   max-width: 100%;
-  min-width: 100%; }
+  min-width: 100%;
+  /* Video background */
+  /* horizontally center the video */
+  /* set video aspect ratio and vertically center */ }
   #logo h1 {
-    position: absolute;
-    z-index: 100;
     color: #ffffff;
     font-family: 'Robinsons Gothic Regular';
     font-size: 3.117rem;
-    letter-spacing: 0.206rem;
-    background: transparent; }
-  #logo video {
+    letter-spacing: 0.206rem; }
+  #logo .videobg {
     position: relative;
+    width: 100%;
+    /* Set video container element width here */
+    height: 100%;
+    /* Set video container element height here */
+    overflow: hidden;
+    background: #111;
+    /* bg color, if video is not high enough */ }
+  #logo .videobg-width {
+    position: absolute;
+    width: 100%;
+    /* Change width value to cover more area*/
+    height: 100%;
+    left: -9999px;
+    right: -9999px;
+    margin: auto; }
+  #logo .videobg-aspect {
+    position: absolute;
+    width: 100%;
+    height: 0;
+    top: -9999px;
+    bottom: -9999px;
+    margin: auto;
+    padding-bottom: 56.25%;
+    /* 16:9 ratio */
+    overflow: hidden; }
+  #logo .videobg-make-height {
+    position: absolute;
+    top: 0;
     right: 0;
     bottom: 0;
-    min-width: 100vw;
-    min-height: 100vh; }
+    left: 0; }
+  #logo .videobg-hide-controls {
+    box-sizing: content-box;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    /* Vimeo timeline and play button are ~55px high */
+    padding: 55px 97.7777px;
+    /* 16:9 ratio */
+    top: -55px;
+    left: -97.7777px;
+    /* 16:9 ratio */ }
+  #logo .videobg iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: 0 none; }
 
 #tagline h3 {
   text-align: center; }
