--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1106,6 +1106,30 @@
           font-family: 'Robinsons Gothic Regular';
           font-size: 3.117rem;
           letter-spacing: 0.206rem;
+          background: transparent;
+          @media screen and (max-width: 800px) {
+              font-size: 20vw;
+          }
+        }
+
+        .hero-text {
+          background: transparent;
+          text-align: center;
+          position: absolute;
+          overflow: hidden;
+          max-width: 100%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+
+      }
+
+      .full-screen-video {
+        height: 100vh;
+        width: 100vw;
+
+        video {
+          height: 100%;
         }
       }
 
