add: animation delay

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1133,13 +1133,11 @@
 
         video {
           opacity: 0;
-          animation-delay: 3s;
-          -webkit-animation-delay:3s;
           -webkit-animation-fill-mode: forwards;
-          -webkit-animation: fadeIN 3s forwards; /* Safari 4+ */
-          -moz-animation:    fadeIN 3s forwards; /* Fx 5+ */
-          -o-animation:      fadeIN 3s forwards; /* Opera 12+ */
-          animation:         fadeIN 3s forwards; /* IE 10+, Fx 29+ */
+          -webkit-animation: fadeIN 3s 0.3s forwards; /* Safari 4+ */
+          -moz-animation:    fadeIN 3s 0.3s forwards; /* Fx 5+ */
+          -o-animation:      fadeIN 3s 0.3s forwards; /* Opera 12+ */
+          animation:         fadeIN 3s 0.3s forwards; /* IE 10+, Fx 29+ */
           height: 100%;
           @media screen and (min-width: 2050px) {
               width: 100%;
