--- a/css/styles.css
+++ b/css/styles.css
@@ -919,16 +919,14 @@ section h3 {
   overflow: hidden; }
   .full-screen-video video {
     opacity: 0;
-    animation-delay: 3s;
-    -webkit-animation-delay: 3s;
     -webkit-animation-fill-mode: forwards;
-    -webkit-animation: fadeIN 3s forwards;
+    -webkit-animation: fadeIN 3s 0.3s forwards;
     /* Safari 4+ */
-    -moz-animation: fadeIN 3s forwards;
+    -moz-animation: fadeIN 3s 0.3s forwards;
     /* Fx 5+ */
-    -o-animation: fadeIN 3s forwards;
+    -o-animation: fadeIN 3s 0.3s forwards;
     /* Opera 12+ */
-    animation: fadeIN 3s forwards;
+    animation: fadeIN 3s 0.3s forwards;
     /* IE 10+, Fx 29+ */
     height: 100%; }
     @media screen and (min-width: 2050px) {
