update: header z-index

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -836,7 +836,7 @@
         width: 100%;
         top: 0;
         left: 0;
-
+        z-index: 999;
         // &.hideOnScroll {
         //     -webkit-transform: translateY(-81px);
         //     transform: translateY(-81px);
