--- a/css/styles.css
+++ b/css/styles.css
@@ -709,7 +709,8 @@ header {
   position: fixed;
   width: 100%;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 999; }
 
 nav ul {
   font-family: 'Garamond Premr Pro';
